# FeRoseRap

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: release_feroserap.yml
feroserap/: app.py
feroserap/feroserap-react/: package-lock.json  package.json
feroserap/feroserap-react/src/: App.css  App.js
feroserap/templates/: index.html
nats/: README.md
